Toggled navbar menu v.overlap resolved

--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -186,6 +186,9 @@ footer {
 }
 }
 
+ul.nav.navbar-nav {
+  margin-top: 20px;
+}
 
 /* center navigation */
  .nav.navbar-nav {
